# backend

./: .gitignore  .gitmodules  Cargo.toml  README.md  data.sql  schema.sql  wrangler.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml
management/: Cargo.toml  wrangler.toml
management/src/: lib.rs
management/src/menu/: mod.rs  new_item.rs  service_bindings.rs  update_item.rs
models/: Cargo.toml
models/src/: basic_details.rs  id.rs  ingredient_or_category.rs  item_details.rs  lib.rs
public/: Cargo.toml  build.rs  wrangler.toml
public/src/: cache.rs  error.rs  lib.rs
public/src/menu/: categories.rs  category.rs  details.rs  image.rs  ingredients.rs  item.rs  mod.rs
src/: lib.rs
src/menu/: item.rs
