[workspace]
members = [
    "management",
    "public",
    "models",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
worker = { version = "0.6.0", features = [ "d1", "http" ] }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.7" }
serde = "1.0.219"
http = "1.3.1"
axum = { version = "0.8", default-features = false, features = [ "json", "macros" ]}
tower-service = "0.3"
