[package]
name = "public"
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true

models = { path = "../models" }
