[package]
name = "public"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '--all-features']

[dependencies]
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true

models = { path = "../models" }
